@@ -1,4 +1,4 @@
-.\"        $OpenBSD: vi.1,v 1.79 2021/03/08 02:47:29 jsg Exp $
+.\"        $OpenBSD: vi.1,v 1.82 2022/04/22 21:09:48 jmc Exp $
 .\"
 .\" Copyright (c) 1994
 .\"        The Regents of the University of California.  All rights reserved.
