@@ -1,4 +1,7 @@
 OpenVi 7.0.16 -> OpenVi 7.1.17-dev: Sat Apr 9 21:00:26 2022
+        + Check tkp->output != NULL before taking strlen for both command
+          mappings and input mappings; this adds a missing check for command
+          mappings and simplifies the input mappings; ok millert@
         + From upstream man page, add missing comma; ok jmc@
         + Update documentation
 
